--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ httplib2==0.31.0
 idna==3.11
 proto-plus==1.26.1
 protobuf==5.29.5
+psycopg2-binary==2.9.11
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.12.5
